# challenges-rust

./: Cargo.toml
src/: cards.rs  downloader.rs  main.rs  maths.rs  primes.rs
