[package]
name = "challenges-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ofer Sadan"]
description = "Just me trying to learn Rust"
repository = "https://github.com/ofersadan85/challenges-rust"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
